--- a/basic-sample/public/css/realchart-style.css
+++ b/basic-sample/public/css/realchart-style.css
@@ -182,13 +182,26 @@
     --rct-polar-yaxis-grid-line-stroke: #ccc;
     --rct-polar-axis-labels-fill: #555;
 
+    /* linear gauge */
+    --rct-linear-gauge-background-fill: #eee;
+    --rct-linear-gauge-value-fill: green;
+    --rct-linear-gauge-band-tick-labels-stroke: #333;
+    --rct-linear-gauge-group-label-fill: #333;
+    /** bullet gauge */
+    --rct-bullet-gauge-background-fill: #eee;
+    --rct-bullet-gauge-value-fill: #333;
+    --rct-bullet-gauge-target-fill: #333;
+    --rct-bullet-gauge-label-fill: #333;
+    --rct-bullet-gauge-scale-line-stroke: #333;
+    --rct-bullet-gauge-scale-ticks-stroke: #333;
+    --rct-bullet-gauge-scale-tick-labels-stroke: #333;
     /* circle gauge */
-    --rct-circle-gauge-back-fill: #ededed;
+    --rct-circle-gauge-rim-fill: #ededed;
     --rct-circle-gauge-inner-fill: none;
     --rct-circle-gauge-label-fill: #000;
     --rct-gauge-scale-line: #555;
     --rct-gauge-scale-tick: #555;
-    --rct-gauge-scale-tick-labels: #333;
+    --rct-gauge-scale-tick-labels-stroke: #333;
     /* clock gauge */
     --rct-clock-gauge-face-fill: white;
     --rct-clock-gauge-rim-fill: #eee;
@@ -236,12 +249,14 @@
     --rct-polar-yaxis-grid-line-stroke: #fff;
     --rct-polar-axis-labels-fill: #fff;
 
+    /* linear gauge */
+    --rct-linear-gauge-group-label-fill: #eee;
     /* circle gauge */
-    --rct-circle-gauge-back-fill: #515151;
+    --rct-circle-gauge-rim-fill: #515151;
     --rct-circle-gauge-label-fill: #fff;
     --rct-gauge-scale-line: #fff;
     --rct-gauge-scale-tick: #fff;
-    --rct-gauge-scale-tick-labels: #fff;
+    --rct-gauge-scale-tick-labels-stroke: #fff;
 
     /** zoom tracker */
     --rct-zoom-tracker-fill: #efefef40;
@@ -277,11 +292,11 @@
     --rct-polar-axis-labels-fill: #f0d9be;
 
     /* circle gauge */
-    --rct-circle-gauge-back-fill: #515151;
+    --rct-circle-gauge-rim-fill: #515151;
     --rct-circle-gauge-label-fill: #fff;
     --rct-gauge-scale-line: #fff;
     --rct-gauge-scale-tick: #fff;
-    --rct-gauge-scale-tick-labels: #fff;
+    --rct-gauge-scale-tick-labels-stroke: #fff;
 
     /** zoom tracker */
     --rct-zoom-tracker-fill: #efefef40;
@@ -778,6 +793,9 @@
 .rct-ohlc-series .rct-point[data-decline] {
     stroke: #00f;
 }
+.rct-ohlc-series .rct-point[data-focus] .rct-ohlc-point-back {
+    fill: #0088ff20 !important;
+}
 .rct-ohlc-point-back {
     stroke: none;
 }
@@ -804,6 +822,9 @@
 .rct-errorbar-series .rct-point {
     stroke: #008;
     stroke-width: 2px;
+}
+.rct-errorbar-series .rct-point[data-focus] .rct-errorbar-point-back {
+    fill: #0088ff20 !important;
 }
 
 /** lollipop series */
@@ -898,8 +919,8 @@
 }
 
 /** circle gauge */
-.rct-circle-gauge-back {
-    fill: var(--rct-circle-gauge-back-fill);
+.rct-circle-gauge-rim {
+    fill: var(--rct-circle-gauge-rim-fill);
 }
 .rct-circle-gauge-inner {
     fill: var(--rct-circle-gauge-inner-fill);
@@ -979,49 +1000,50 @@
 }
 .rct-gauge-scale-tick-labels {
     font-size: 0.85em;
-    fill: var(--rct-gauge-scale-tick-labels);
+    fill: var(--rct-gauge-scale-tick-labels-stroke);
 }
 
 /** linear gauge */
 .rct-linear-gauge-background {
-    fill: #eee;
+    fill: var(--rct-linear-gauge-background-fill);
 }
 .rct-linear-gauge-value {
-    fill: green;
+    fill: var(--rct-linear-gauge-value-fill);
 }
 .rct-linear-gauge-band-tick-labels {
     font-size: 0.85em;
-    fill: #333;
+    fill: var(--rct-linear-gauge-band-tick-labels-stroke);
 }
 
 /** linear gauge group */
 .rct-linear-gauge-group-label {
+    fill: var(--rct-linear-gauge-group-label-fill);
     font-size: 1.5em;
 }
 
 /** bullet gauge */
 .rct-bullet-gauge-background {
-    fill: #eee;
+    fill: var(--rct-bullet-gauge-background-fill);
 }
 .rct-bullet-gauge-value {
-    fill: #333;
+    fill: var(--rct-bullet-gauge-value-fill);
 }
 .rct-bullet-gauge-target {
-    fill: #338;
+    fill: var(--rct-bullet-gauge-target-fill);
 }
 .rct-bullet-gauge-label {
     font-size: 1em;
-    fill: #333;
+    fill: var(--rct-bullet-gauge-label-fill);
 }
 .rct-bullet-gauge-scale-line {
-    stroke: #333;
+    stroke: var(--rct-bullet-gauge-scale-line-stroke);
 }
 .rct-bullet-gauge-scale-ticks {
-    stroke: #333;
+    stroke: var(--rct-bullet-gauge-scale-ticks-stroke);
 }
 .rct-bullet-gauge-scale-tick-labels {
     font-size: 0.9em;
-    fill: #333;
+    fill: var(--rct-bullet-gauge-scale-tick-labels-stroke);
 }
 
 /** bullet gauge group */
@@ -1050,10 +1072,12 @@
 }
 
 /** annotation */
+.rct-annotation-background {
+    fill: none;
+    stroke: none;
+}
 .rct-text-annotation {
     font-size: 20px;
-}
-.rct-shape-annotation {
     stroke: #333;
     stroke-width: 3px;
 }
